--- a/Android/app/src/main/res/values/strings.xml
+++ b/Android/app/src/main/res/values/strings.xml
@@ -4,5 +4,11 @@
     <string name="app_name">KYA</string>
     <string name="hello_round">Hello Round World!</string>
     <string name="hello_square">Hello Square World!</string>
+    <string name="title_activity_survey">SurveyActivity</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="action_settings">Settings</string>
+    <string name="title_activity_notification">NotificationActivity</string>
+    <string name="title_activity_threshold">ThresholdActivity</string>
+    <string name="title_activity_orientation">OrientationActivity</string>
 
 </resources>
